filter overflow fixed

--- a/src/styles/Catalog.css
+++ b/src/styles/Catalog.css
@@ -128,6 +128,7 @@
     z-index: 2;
     width: 100%;
     height: 100vh;
+    overflow: auto;
   }
 
   .catalog__nav-back {
